--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Exercícios Backend",
   "main": "lista03.js",
   "scripts": {
+    "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
